--- a/views/usuario.html
+++ b/views/usuario.html
@@ -8,14 +8,14 @@
         <link rel="stylesheet" href="index.css">
     </head>
     <body>
-    %if logued:
-        <div class="aux" id="data">
-            <h1>Hi, {{ logued['name'] }} </h1>
+    %if loged:
+        <div id="data">
+            <h1>Hi, {{ loged[0] }} </h1>
             <form method="post" action="/editProfile">
                 <label for "username"> username </label>
-                <input name="username" type="text" value={{ logued['name'] }}></input>
+                <input name="username" type="text" value={{ loged[0] }}></input>
 
-                <label for "rol"> Rol: {{ logued['type'] }} </label>
+                <label for "email"> Email: {{ loged[2] }} </label>
                 <br/>
                 <input type="submit"value="Actualizar perfil" >
             </form>
