--- a/views/css/index.css
+++ b/views/css/index.css
@@ -19,13 +19,24 @@ body{
     }
 }
 
-#login, #data{
+#login{
     height: 420px;
     background: #000;
     /*Color de la letra*/
     color: #fff;
     box-sizing: border-box;
     margin-left: 40%;
+    margin-top: 10%;
+    padding: 40px 30px;
+}
+
+#data{
+    height: 420px;
+    background: #000;
+    /*Color de la letra*/
+    color: #fff;
+    box-sizing: border-box;
+    margin-left: 2.5%;
     margin-top: 10%;
     padding: 40px 30px;
 }
@@ -109,4 +120,47 @@ body{
 
 #regForm{
     display: none;
+}
+
+.aux{
+    float: left;
+}
+
+main{
+    margin-left: 20%;
+    margin-top: 5%;
+    height: 100%;
+    width: 72.5%;
+    position: absolute;
+}
+
+main form{
+    height: 10%;
+    width: 100%;
+}
+
+main form input{
+    width: 100%;
+    height: 100%;
+    color: white;
+    background-color: #000;
+    padding: 2%;
+}
+
+main form input[type="submit"]{
+    border: none;
+    outline: none;
+    height: 30px;
+    background: #FAD201;
+    color: #fff;
+    font-size: 18px;
+    text-align: center;
+    border-radius: 20px;
+    margin-top: 1%;
+    width: 100%;
+}
+
+
+main form input[type="submit"]:hover{
+    background-color: #FFA420; 
 }
