--- a/views/css/index.css
+++ b/views/css/index.css
@@ -164,3 +164,18 @@ main form input[type="submit"]{
 main form input[type="submit"]:hover{
     background-color: #FFA420; 
 }
+
+.Muro{
+    color: white;
+    margin-top: 15%;
+    margin-left: 2%;
+}
+
+.publicacion{
+    width: 100%;
+    background-color: #000;
+    padding: 2%;
+    border-radius: 20px;
+    border-color: white;
+    margin: 1%;
+}
