--- a/views/css/index.css
+++ b/views/css/index.css
@@ -179,3 +179,36 @@ main form input[type="submit"]:hover{
     border-color: white;
     margin: 1%;
 }
+
+.barraBusqueda{
+    margin-left: 15% !important;
+    margin-top: 10%;
+    width: 100%;
+    height: 25%;
+}
+
+.barraBusqueda input[type="text"]{
+    width: 100%;
+}
+
+#search{
+    border:none;
+    border-bottom: 1px solid white;
+    background: transparent;
+    outline: none;
+    height: 40px;
+    color: white;
+    font-size: 16px;
+}
+
+#barraBusquedaComentarios{
+    position: relative;
+    margin-left: 25%;
+    margin-bottom: 2.5%;
+}
+
+#barraBusquedaComentarios input[type="text"]
+{
+    width: 100%;
+}
+
