Añadida lista de seguidores y seguidos

--- a/views/usuario.html
+++ b/views/usuario.html
@@ -29,6 +29,10 @@
                     <input type="submit"value="Ver seguidos" >
                 </form>
 
+                <form method="post" action="/verSeguidores">
+                    <input type="submit"value="Ver seguidores" >
+                </form>
+
             </div>
             <div class="barraBusqueda">
                 <form method="post" action="/buscar">
