--- a/views/usuario.html
+++ b/views/usuario.html
@@ -53,6 +53,11 @@
                     <p><strong>{{ p.nombre }}</strong></p>
                     <p>{{ p.contenido}}</p>
                     <p>{{ p.fecha }}</p>
+
+                    <form method="post" action="/eliminarPublicacion">
+                        <input type="submit"value="Eliminar" >
+                        <input type="hidden" name="id" value={{p.id}}>
+                    </form>
                 </div>
             % end
             </div>
