--- a/views/index.html
+++ b/views/index.html
@@ -12,6 +12,7 @@
     
     <div  id="login">
         <h1>Login here</h1>
+        <br/>
         <form method="post" action="/login">
             <label for "name"> Username </label>
             <input name="name" type="text" placeholder="Enter Username"></input>
@@ -22,14 +23,12 @@
             <input type="button" value="Sing Up" onclick="mostrarRegistro()">
             <a href="#"> I forgot my password </a>
         </form>
-        %if error:
-            %if error == 1:
-                <p>El usuario o la contraseña no son correctos</p>
     </div>
 
 
     <div id="regForm">
         <h1>Sing up</h1>
+        <br/>
         <form method="post" action="/users">
             <label for "name"> Username </label>
             <input name="name" type="text" placeholder="Enter Username"></input>
@@ -48,5 +47,11 @@
 
         </form>
     </div>
+    %if error:
+        %if error == 1:
+        <div class="alert">
+            <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
+            El usuario o la contraseña no son válidos
+          </div>
 
     </body>
