--- a/views/usuario.html
+++ b/views/usuario.html
@@ -13,8 +13,9 @@
         <div class="aux">
             <div id="data">
                 <h1>Hi, {{ logged.name }} </h1>
+                <br/>
                 <form method="post" action="/editProfile">
-                    <label for "username"> username </label>
+                    <label for "username"> Username </label>
                     <input name="username" type="text" value={{ logged.name }}></input>
 
                     <br/>
@@ -34,31 +35,43 @@
                 </form>
 
             </div>
-            <div class="barraBusqueda">
-                <form method="post" action="/buscar">
-                    <input name="consulta" type="text" id="search" placeholder="Search..." />
-                </form>
-              </div>
+
         </div>
 
         <main>
+            <div class="search">
+                <form method="post" action="/buscar">
+                    <input name="consulta" type="text"  placeholder="Search..." />
+                </form>
+              </div>
 
-            <form action="/publicaciones" method="post">
-                <input name="contenido" type="textarea" placeholder="¿Qué está pasando?"></input>
-                <input type="submit"value="Publicar" >
-            </form>
+            <div class="publicar">
+                <form action="/publicaciones" method="post">
+                    <input name="contenido" type="textarea" placeholder="¿Qué está pasando?"></input>
+                    <input type="submit"value="Publicar" >
+                </form>
+            </div>
+
             <div class="Muro">
             % for p in reversed(logged.publicaciones): 
-                <div class="publicacion">
-                    <p><strong>{{ p.nombre }}</strong></p>
-                    <p>{{ p.contenido}}</p>
-                    <p>{{ p.fecha }}</p>
+                <div class="comment-main-level">
+					<!-- Contenedor del Comentario -->
+					<div class="comment-box">
+						<div class="comment-head">
+                            <h6 class="comment-name by-author">{{ p.nombre }}</h6>
+							<span>{{ p.fecha }}</span>
+						</div>
+						<div class="comment-content">
+                            {{ p.contenido}}
+                            <form method="post" class="eliminar" action="/eliminarPublicacion">
+                                <input type="submit" value="Eliminar" >
+                                <input type="hidden" name="id" value={{p.id}}>
+                            </form>
+                        </div>
 
-                    <form method="post" action="/eliminarPublicacion">
-                        <input type="submit"value="Eliminar" >
-                        <input type="hidden" name="id" value={{p.id}}>
-                    </form>
+					</div>
                 </div>
+                <br/>
             % end
             </div>
 
