--- a/views/index.html
+++ b/views/index.html
@@ -52,6 +52,15 @@
         <div class="alert">
             <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
             El usuario o la contraseña no son válidos
-          </div>
+        </div>
+        %end
+        %if error == 2:
+            <div class="alert">
+                <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
+                Las contraseñas no coinciden
+            </div>
+        %end
+    %end
+
 
     </body>
